# Python-scraper

./: $null  .gitignore  DASHBOARD_DEPLOYMENT.md  DASHBOARD_QUICKSTART.md  DEDUP_ANALYSIS_SUMMARY.md  FILTER_MODULE_SUMMARY.md  LIC_FIXES_BEFORE_AFTER.md  LIC_FIXES_CODE_REFERENCE.md  LIC_FIXES_COMPLETE.md  LIC_FIXES_COPY_PASTE_CODE.md  LIC_FIXES_FUNCTIONS_DETAIL.md  LIC_FIXES_IMPLEMENTATION_REPORT.md  LIC_FIXES_QUICK_REFERENCE.md  LIC_FIXES_SUMMARY.md  PIPELINE_COMPLETION_REPORT.md  README.md  SMART_DEDUP_REPORT.md  SOLUTION_COMPLETE.md  add_download_ui.py  add_pipeline_js.py  add_shareholders_api.py  add_viewer_js.py  analyze_pdfs_comprehensive.py  batch_parse_all_pdfs.py  check_line.py  create_blueprint.py  dashboard_fix_verification.py  debug_output.txt  diagnose_merger.py  downloader.py  fetch_companies.py  final_dashboard_check.py  final_verification.py  find_csv.py  find_db.py  fix_all.py  fix_api_sort.py  fix_csv.py  fix_csv2.py  fix_csv3.py  (+43 more)
config/: settings.yaml  sources.yaml
data/: pipeline.db  progress_status.json  shareholders.db
data/cache/: market_prices.json
data/inhouse_db/: contact_results.db  sample_demat_database.xlsx
data/output/: dedup_stats.json  duplicates_removed.xlsx  enrichment_checkpoint.json  master_merged.csv  (+24 more)
src/: bulk_scraper.py  company_registry.py  downloader.py
tests/: _diag.py  create_test_pdf.py  diagnose_pdf_issues.py  pdf_diagnosis.txt  scan_pages.py  test_cli.py  test_excel_writer.py  test_manual_uploader.py  test_merger.py  test_normalizer.py  test_pdf_parser.py  test_progress.py  test_unified_schema.py  test_validator.py
(+71 files in other folders)
